objects/TracRTC__User_Group_Criteria_Set__c.object
<CustomObject>
    <description>Junction object between the User Group and Criteria Set entities</description>
    <fields>
        <fullName>TracRTC__Capping_Amount__c</fullName>
        <description>The capping amount of each user associated with the parent User Group record, e.g. 2, 10, 50</description>
        <label>Capping Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Criteria_Set__c</fullName>
        <description>A reference for a Criteria Set record</description>
        <label>Criteria Set</label>
        <referenceTo>TracRTC__Criteria_Set__c</referenceTo>
        <relationshipLabel>User Group Criteria Sets</relationshipLabel>
        <relationshipName>User_Group_Criteria_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracRTC__Object_Type__c</fullName>
        <description>An object type, e.g. Lead, Account, Opportunity, Contact</description>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__User_Group__c</fullName>
        <description>A reference for an User Group record</description>
        <label>User Group</label>
        <referenceTo>TracRTC__User_Group__c</referenceTo>
        <relationshipLabel>User Group Criteria Sets</relationshipLabel>
        <relationshipName>User_Group_Criteria_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Group Criteria Set</label>
    <nameField>
        <label>User Group Criteria Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Group Criteria Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>